<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NavigationFragment">

    <Button
        android:id="@+id/goToDz0"
        style="@style/MenuButtonStyle"
        android:text="@string/dz0" />

    <Button
        android:id="@+id/goToDz1"
        style="@style/MenuButtonStyle"
        android:text="@string/dz1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goToDz2a"
            style="@style/MenuButtonStyle"
            android:text="@string/dz2a" />

        <Button
            android:id="@+id/goToDz2b"
            style="@style/MenuButtonStyle"
            android:text="@string/dz2b" />

    </LinearLayout>

    <Button
        android:id="@+id/goToDz3"
        style="@style/MenuButtonStyle"
        android:text="@string/dz3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goToDz5a"
            style="@style/MenuButtonStyle"
            android:text="@string/dz5a" />

        <Button
            android:id="@+id/goToDz5b"
            style="@style/MenuButtonStyle"
            android:text="@string/dz5b" />

    </LinearLayout>

</LinearLayout>