<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".dz0.Dz0Activity"
        android:orientation="vertical">

    <TextView
            android:text="@string/text_1"
            android:textSize="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:id="@+id/textView1"/>
    <Button
            android:text="@string/button_title"
            android:textSize="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"/>
    <TextView
            android:text="@string/text_2"
            android:textSize="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/textView2"/>
</LinearLayout>